connected to db

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,5 +14,20 @@ services:
             - pgdata:/var/lib/postgresql/data
         ports:
             - 5432:5432
+
+    go:
+        image: golang:latest
+        container_name: golang-be
+        restart: always
+
+        build:
+            context: ./
+            dockerfile: Dockerfile
+        volumes:
+            - ./:/app
+        ports:
+            - 8080:8080
+        depends_on:
+            - db
 volumes:
     pgdata:
